@@ -24,8 +24,8 @@ import java.io.FileWriter;
 import java.io.IOException;
 import java.net.URISyntaxException;
 import java.time.Duration;
-import java.util.Arrays;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -41,7 +41,8 @@ public class WithAuth {
     private static final String OLLAMA_VERSION = "0.6.1";
     private static final String NGINX_VERSION = "nginx:1.23.4-alpine";
     private static final String BEARER_AUTH_TOKEN = "secret-token";
-    private static final String CHAT_MODEL_LLAMA3 = "llama3";
+    private static final String GENERAL_PURPOSE_MODEL = "gemma3:270m";
+//    private static final String THINKING_MODEL = "gpt-oss:20b";
 
 
     private static OllamaContainer ollama;
@@ -49,7 +50,7 @@ public class WithAuth {
     private static OllamaAPI api;
 
     @BeforeAll
-    public static void setUp() {
+    static void setUp() {
         ollama = createOllamaContainer();
         ollama.start();
 
@@ -68,7 +69,7 @@ public class WithAuth {
         LOG.info(
                 "The Ollama service is now accessible via the Nginx proxy with bearer-auth authentication mode.\n" +
                         "→ Ollama URL: {}\n" +
-                        "→ Proxy URL: {}}",
+                        "→ Proxy URL: {}",
                 ollamaUrl, nginxUrl
         );
         LOG.info("OllamaAPI initialized with bearer auth token: {}", BEARER_AUTH_TOKEN);
@@ -132,14 +133,14 @@ public class WithAuth {
 
     @Test
     @Order(1)
-    void testOllamaBehindProxy() throws InterruptedException {
+    void testOllamaBehindProxy() {
         api.setBearerAuth(BEARER_AUTH_TOKEN);
         assertTrue(api.ping(), "Expected OllamaAPI to successfully ping through NGINX with valid auth token.");
     }
 
     @Test
     @Order(1)
-    void testWithWrongToken() throws InterruptedException {
+    void testWithWrongToken() {
         api.setBearerAuth("wrong-token");
         assertFalse(api.ping(), "Expected OllamaAPI ping to fail through NGINX with an invalid auth token.");
     }
@@ -149,46 +150,30 @@ public class WithAuth {
     void testAskModelWithStructuredOutput()
             throws OllamaBaseException, IOException, InterruptedException, URISyntaxException {
         api.setBearerAuth(BEARER_AUTH_TOKEN);
+        String model = GENERAL_PURPOSE_MODEL;
+        api.pullModel(model);
 
-        api.pullModel(CHAT_MODEL_LLAMA3);
-
-        int timeHour = 6;
-        boolean isNightTime = false;
-
-        String prompt = "The Sun is shining, and its " + timeHour + ". Its daytime.";
+        String prompt = "The sun is shining brightly and is directly overhead at the zenith, casting my shadow over my foot, so it must be noon.";
 
         Map<String, Object> format = new HashMap<>();
         format.put("type", "object");
         format.put("properties", new HashMap<String, Object>() {
             {
-                put("timeHour", new HashMap<String, Object>() {
-                    {
-                        put("type", "integer");
-                    }
-                });
-                put("isNightTime", new HashMap<String, Object>() {
+                put("isNoon", new HashMap<String, Object>() {
                     {
                         put("type", "boolean");
                     }
                 });
             }
         });
-        format.put("required", Arrays.asList("timeHour", "isNightTime"));
+        format.put("required", List.of("isNoon"));
 
-        OllamaResult result = api.generate(CHAT_MODEL_LLAMA3, prompt, format);
+        OllamaResult result = api.generate(model, prompt, format);
 
         assertNotNull(result);
         assertNotNull(result.getResponse());
         assertFalse(result.getResponse().isEmpty());
 
-        assertEquals(timeHour,
-                result.getStructuredResponse().get("timeHour"));
-        assertEquals(isNightTime,
-                result.getStructuredResponse().get("isNightTime"));
-
-        TimeOfDay timeOfDay = result.as(TimeOfDay.class);
-
-        assertEquals(timeHour, timeOfDay.getTimeHour());
-        assertEquals(isNightTime, timeOfDay.isNightTime());
+        assertEquals(true, result.getStructuredResponse().get("isNoon"));
     }
 }
